topics/kubernetes/uru-k8-ingress/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: hashicorp/http-echo
        args:
        - "-text=Orders Service"
        ports:
        - containerPort: 5678
