topics/kubernetes/uru-k8-ingress/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
      - name: payments
        image: hashicorp/http-echo
        args:
        - "-text=Payments Service"
        ports:
        - containerPort: 5678
