topics/kubernetes/uru-k8-ingress/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - port: 9000
    targetPort: 80
  type: ClusterIP
