topics/kubernetes/uru-k8-ingress/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
  - port: 8000
    targetPort: 5678
  type: ClusterIP
