topics/kubernetes/uru-k8-ingress/payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  selector:
    app: payments
  ports:
  - port: 7000
    targetPort: 5678
  type: ClusterIP
