topics/kubernetes/uru-k8-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 9000

      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 8000

      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payments-service
            port:
              number: 7000
